infra/base/nginx-gateway/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  ports:
  - name: https
    targetPort: 8443
